Added footer to the HTML page

--- a/portfolio1.html
+++ b/portfolio1.html
@@ -52,6 +52,14 @@
         <td>Small, blue, fluffy creature with six limbs (four arms, two legs), large ears, and two antennae</td>
     </tr>
   </table>
-  
+  <footer>
+    <p>Contact us: <a href="mailto:stitch@example.com">stitch@example.com</a></p>
+    <ul>
+        <li><a href="facebook">Facebook</a></li>
+        <li><a href="twitter">Twitter</a></li>
+        <li><a href="instagram">Instagram</a></li>
+    </ul>
+    
+</footer>
 </body>
 </html>
